--- a/styles/style.css
+++ b/styles/style.css
@@ -7,12 +7,23 @@
     background-position: top right;
 }
 
-.container {
-    padding: 75px; 
-   
+.container { 
+   width: 80vh;
+   margin: 0 auto;
+   height: 100%;
 }
 
-.nav__cabecalho {
+.header__cabecalho {
+    display: flex;
+    align-items: center;
+}
+
+
+
+
+
+/*
+.header__cabecalho {
     display: flex;
     align-items: center;
 }
@@ -63,14 +74,14 @@
     padding: 75px;
 }
 
-
+*/
 
 
 
 
 
 /*    TITULO   DO    MAIN    */
-
+/*
 h1 {
     color: #FFFFFF;
     font-family: 'Calistoga', cursive;
@@ -98,3 +109,5 @@ h2 {
     width: 1512px;
     height: 377px;
 }
+
+*/
