--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,7 @@
 }
 
 .container { 
-   width: 80vh;
+   width: 80vh; /*80*/
    height: 100%;
    margin: 0 auto;
 }
@@ -53,7 +53,7 @@ nav > ul {
     justify-content: space-between; 
 }
 
-ul > li > a {
+nav > ul > li > a {
     color: var(--color-white);
     font-family: 'Iceland';
     font-weight: 400;
@@ -63,7 +63,7 @@ ul > li > a {
 
 /* esse hover, assim que o cursor fica sobre a palavra link, e;a fica mais grossa/pesada/peso, é isso*/
 /* ela é a mesma coisa dessa de cima, só que essa só funciona quando setada*/
-ul >li > a:hover {
+nav > ul >li > a:hover {
     font-weight: 600;
 }
 
@@ -137,7 +137,7 @@ h3 {
     width: 336px;
     height: 65px;
     font-family: Iceland;
-    font-size: 26px;
+    font-size: 30px;
     font-weight: 400;
     line-height: 35px;
     text-align: left;
@@ -147,6 +147,17 @@ section > ul {
     width: 800px;
 }
 
+.tela__1__textocentro {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--color-white);
+    font-size: 20px;
+    position: relative;
+    bottom: -5rem;
+}
+
+/* nao ta funcionando
 section > ul > li {
     width: 261px;
     height: 139px;
@@ -155,8 +166,9 @@ section > ul > li {
     background-position: top right;
     background-image: url("/img/EP-2.2.png");
                     /*  url("..img/billefrank.png"), 
-                      url("/img/Ellie\ &\ Joel\ adventure\ 1.png");*/
+                      url("/img/Ellie\ &\ Joel\ adventure\ 1.png");
 }
+*/
 
 .episodes {
     background-image: url("/img/1212581-the-last-of-us\ 1.png");
@@ -180,10 +192,10 @@ h2 {
 */
 
 .posts {
-    width: 479px;
-   /* height: 546px; */
-   /* margin-top: 80px; */
-    padding: 5px;
+    width: 397px;
+    height: 846px;
+    margin-top: 80px;
+    padding: 30px;
     text-align: justify;
 }
 
@@ -192,7 +204,23 @@ h2 {
     font-family: Iceland;
     font-size: 22px; 
     font-weight: 400;
-    line-height: 26px; 
+    line-height: 23px; /*31*/
+}
+
+.container__episodes__list {
+       /* position: relative; */
+    /* width: 665px; */
+    height: 46rem;
+    /* left: 751px; */
+    /* top: 1081px; */
+    background: #000000;
+    /* display: flex; */
+    /* justify-content: left; */
+    border-radius: 21px;
+    opacity: 92%;
+    margin: 14px;
+    border: 24px;
+    margin: -1.5rem;
 }
 
 .episodes__list {
@@ -208,7 +236,7 @@ h2 {
     width: 650px;
     display: flex;
     align-items: center;
-    margin: 10px auto;
+    margin: 0px 44px; /*10px auto*/
 }
 
 /* é com ::-webkit-scrollbarr que se faz uma barra de rolagem */
@@ -219,9 +247,9 @@ h2 {
 }
 
 .card > img {
-    height: 120px;
-    width: 250px;
-    border-radius: 12px;
+    height: 123px;
+    width: 198px;
+    border-radius: 3px;
 }
 
 .card__texto {
@@ -242,36 +270,21 @@ h2 {
 
 .card__texto > p {
     color: var(--color-white);
-    height: 88px;
-    width: 324px;
+    height: 5.75rem;
+    width: 22rem;
     top: 639px;
     left: 5690px;
     font-family: Darker Grotesque;
     font-size: 22px;
     font-weight: 400;
     line-height: 22px;
-    text-align: left;
-    border-radius: nullpx;
-    letter-spacing: 0em;
-}
-
-/*FOOTER*/
-
-footer {
-    height: 377px;
-    background: linear-gradient(
-        180deg, #000000 0%, #950202 289.06%);
-}
-
-footer > figure > img {
-    width: 140px;
-    height: 140px;
+    text-align: justify; 
 }
 
 .container > section > h2 {
     color: var(--color-grey);
     font-family: Iceland;
-    height: 47px;
+    height: 66px;
     width: 668px;
     left: 5446px;
     font-size: 48px;
@@ -290,6 +303,19 @@ footer > figure > img {
     font-weight: 400;
     line-height: 31px;
     text-align: left;
+}
+
+/*FOOTER*/
+
+footer {
+    height: 377px;
+    background: linear-gradient(
+        180deg, #000000 0%, #950202 289.06%);
+}
+
+footer > figure > img {
+    width: 140px;
+    height: 140px;
 }
 
 .footer__icons {
