--- a/styles/style.css
+++ b/styles/style.css
@@ -206,31 +206,49 @@ h3 { /* checar se precisa de class 1/3*/
     background-size: cover;
     background-position: top right;
     height: 900px;
-    /* width: 1108px; */
 }
 
-.container__flex {
-    width: 80vh;
+.container__episodes {
+    width: 80vh; 
     height: 100%;
     margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-/*
-h2 {
-   era h3,
-   mudei o titulo pra h2
+.container__episodes__posts-titulo {
+    color: var(--color-grey);
+    font-family: Iceland;
+    height: 66px;
+    width: 668px;
+    left: 5446px;
+    font-size: 48px;
+    font-weight: 400;
+    line-height: 47px;
+    text-align: left;
 }
-*/
 
-.posts {
+/* (ex) posts */
+.container__episodes__posts {
     width: 397px;
     height: 846px;
     margin-top: 80px;
     padding: 30px;
     text-align: justify;
+
+    /*
+     -original antes do fundo preto-
+    width: 479px;
+    height: 546px;
+    margin-top: 80px;
+    padding: 5px;
+    text-align: justify;
+    */
 }
 
-.posts > p {
+/* (ex) posts > p */
+.container__episodes__posts-paragrafo {
     color: var(--color-white);
     font-family: Iceland;
     font-size: 22px; 
