--- a/styles/style.css
+++ b/styles/style.css
@@ -158,7 +158,7 @@ button {
 }
 
 h3 { /* checar se precisa de class 1/3*/
-    color: var(--color-white);
+    color: var(--color-grey);
     width: 336px;
     height: 65px;
     font-family: Iceland;
@@ -217,11 +217,20 @@ h3 { /* checar se precisa de class 1/3*/
     justify-content: center;
 }
 
+/* (ex) posts */
+.container__episodes__posts {
+    width: 397px;
+    height: 813px;
+    margin-top: 80px;
+    padding: 5px;
+    /*text-align: justify;*/
+}
+
 .container__episodes__posts-titulo {
     color: var(--color-grey);
     font-family: Iceland;
-    height: 66px;
-    width: 668px;
+    height: 87px;
+    width: 386px;
     left: 5446px;
     font-size: 48px;
     font-weight: 400;
@@ -229,49 +238,21 @@ h3 { /* checar se precisa de class 1/3*/
     text-align: left;
 }
 
-/* (ex) posts */
-.container__episodes__posts {
-    width: 397px;
-    height: 846px;
-    margin-top: 80px;
-    padding: 30px;
-    text-align: justify;
-
-    /*
-     -original antes do fundo preto-
-    width: 479px;
-    height: 546px;
-    margin-top: 80px;
-    padding: 5px;
-    text-align: justify;
-    */
-}
-
 /* (ex) posts > p */
 .container__episodes__posts-paragrafo {
-    color: var(--color-white);
+    color: var(--color-grey);
     font-family: Iceland;
     font-size: 22px; 
     font-weight: 400;
-    line-height: 23px; /*31*/
+    line-height: 26px;
 }
 
 .container__episodes__list {
-       /* position: relative; */
-    /* width: 665px; */
-    height: 46rem;
-    /* left: 751px; */
-    /* top: 1081px; */
-    background: #000000;
-    /* display: flex; */
-    /* justify-content: left; */
-    border-radius: 21px;
-    opacity: 92%;
-    margin: 14px;
-    border: 24px;
-    margin: -1.5rem;
+    margin: 6rem 1rem 5rem 6rem; 
 }
 
+
+/* AQUI COMEÇA 0 JAVASCRIPT */
 .episodes__list {
     width: 671px;
     height: 762px;
@@ -280,16 +261,19 @@ h3 { /* checar se precisa de class 1/3*/
 }
 
 .card {
-    color: var(--color-white);
+    /* color: var(--color-grey); */
     height: 182px;
-    width: 650px;
+    width: 618px;
     display: flex;
     align-items: center;
-    margin: 0px 44px; /*10px auto*/
+    margin: 18px;
+    border-radius: 7px;
+    background: var(--color-black);
+    padding: 12px;
 }
 
-/* é com ::-webkit-scrollbarr que se faz uma barra de rolagem */
-.episodes__list::-webkit-scrollbarr {
+/* é com ::-webkit-scrollbar que se faz uma barra de rolagem */
+.episodes__list::-webkit-scrollbar {
     background-color: var(--color-secondary);
     border: 3px solid var(--color-black);
     border-radius: 20px;
@@ -297,18 +281,20 @@ h3 { /* checar se precisa de class 1/3*/
 
 .card > img {
     height: 123px;
-    width: 198px;
+    width: 200px;
     border-radius: 3px;
+    margin: 24px 30px 20px 14px;
 }
 
 .card__texto {
     width: 60%;
     height: 80%;
-    margin: 20px;
+   /* margin: 20px;*/
+   margin: -14px;
 }
 
 .card__texto > h4 {
-    color: var(--color-white);
+    color: var(--color-grey);
     height: 30px;
     font-family: Darker Grotesque;
     font-size: 22px;
@@ -318,7 +304,7 @@ h3 { /* checar se precisa de class 1/3*/
 }
 
 .card__texto > p {
-    color: var(--color-white);
+    color: var(--color-grey);
     height: 5.75rem;
     width: 22rem;
     top: 639px;
@@ -328,6 +314,12 @@ h3 { /* checar se precisa de class 1/3*/
     font-weight: 400;
     line-height: 22px;
     text-align: justify; 
+}
+
+ h4 {
+    font-weight: 400;
+    color: var(--color-white);
+    font-size: 16px;
 }
 
 .container > section > h2 {
@@ -393,11 +385,20 @@ footer > figure > img {
     text-align: center;
 }
 
-@media screen and (min-width: 2560px) {
+@media screen and (max-width: 1440px) {
     .home__background__image {
         background-image: url("../img/tlou_wallpaper.png");
         background-repeat: no-repeat;
         background-size: cover;
         background-position: top right;
     }
+
+    .episodes {
+        background-image: url("/img/1212581-the-last-of-us\ 1.png");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: top right;
+        height: 900px;
+    }
+
 }
