--- a/styles/style.css
+++ b/styles/style.css
@@ -208,6 +208,7 @@ h3 { /* checar se precisa de class 1/3*/
     height: 900px;
 }
 
+/*essa div aqui é a que aumenta ou dimini o tamanho da imagem*/
 .container__episodes {
     width: 80vh; 
     height: 100%;
@@ -352,19 +353,51 @@ footer {
     height: 377px;
     background: linear-gradient(
         180deg, #000000 0%, #950202 289.06%);
-   /* background-size: cover; */
 }
 
-footer > figure > img {
-    width: 140px;
+.container__rodape {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 16px;
+}
+
+/*footer > figure > img*/ 
+.logo__kenzie {
+    /*
     height: 140px;
+    width: 140px;
+    */
 }
 
+.container__rodape__section__titulo-h2 {
+    color: var(--color-grey);
+    width: 336px;
+    height: 65px;
+    font-family: Iceland;
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 35px;
+    text-align: left;
+}
+
+.container__rodape__section__titulo-h3 {
+    color: var(--color-grey);
+    width: 336px;
+    height: 65px;
+    font-family: Iceland;
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 35px;
+    text-align: left;
+}
+
+/*
 .rodape__flex-column {
     display: flex;
     flex-direction: column;
     gap: 10px;
- }
+ } */
 
 .footer__icons {
     display: flex;
@@ -373,7 +406,13 @@ footer > figure > img {
     gap: 20px;
 }
 
-.madjan__footer-paragrafo {
+.container__rodape__paragrafo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container__rodape__paragrafo-madjan {
     color: var(--color-grey);
     font-family: Iceland;
     height: 31px;
@@ -382,7 +421,7 @@ footer > figure > img {
     font-size: 32px;
     font-weight: 400;
     line-height: 31px;
-    text-align: center;
+    text-align: center; 
 }
 
 @media screen and (max-width: 1440px) {
