--- a/styles/style.css
+++ b/styles/style.css
@@ -264,7 +264,7 @@ h3 { /* checar se precisa de class 1/3*/
 .card {
     /* color: var(--color-grey); */
     height: 182px;
-    width: 500px;  /*618*/
+    width: 613px;  /*610 618*/
     display: flex;
     align-items: center;
     margin: 18px;
@@ -364,49 +364,49 @@ footer {
 
 /*footer > figure > img*/ 
 .logo__kenzie {
-    /*
-    height: 140px;
-    width: 140px;
-    */
+    margin: 2rem 2rem 2rem 7rem;   
+}
+
+.container__rodape__section {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    height: 6rem;
+    align-items: center;
 }
 
 .container__rodape__section__titulo-h2 {
     color: var(--color-grey);
-    width: 336px;
+    width: 27rem;
     height: 65px;
     font-family: Iceland;
     font-size: 30px;
     font-weight: 400;
     line-height: 35px;
     text-align: left;
+    align-items: center;
 }
 
 .container__rodape__section__titulo-h3 {
     color: var(--color-grey);
-    width: 336px;
+    width: 25rem;
     height: 65px;
     font-family: Iceland;
     font-size: 30px;
     font-weight: 400;
     line-height: 35px;
     text-align: left;
+    align-items: center;
 }
-
-/*
-.rodape__flex-column {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
- } */
 
 .footer__icons {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 20px;
+    gap: 20px;  
 }
 
-.container__rodape__paragrafo {
+.container__rodape__titulo-madjan-h5 {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -414,14 +414,16 @@ footer {
 
 .container__rodape__paragrafo-madjan {
     color: var(--color-grey);
+    width: 81rem;
+    height: 6rem;
     font-family: Iceland;
-    height: 31px;
-    width: 449px;
-    margin: 0 auto;
-    font-size: 32px;
+    font-size: 2.5rem;
     font-weight: 400;
-    line-height: 31px;
-    text-align: center; 
+    line-height: 2.5rem;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 @media screen and (max-width: 1440px) {
